--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AtomicPDF - Professional PDF Editor Built for Privacy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
+    <title>Atomic PDF</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
